unpackaged/objects/Contact.object
<CustomObject>
  <fields>
    <fullName>MDMStatus__c</fullName>
    <label>MDM Status</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Duplicated</fullName>
        </value>
        <value>
          <fullName>Deleted</fullName>
        </value>
        <value>
          <fullName>Forget</fullName>
        </value>
        <value>
          <fullName>Inactive</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>MSP_Participant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this if this Contact is MSP Participant - (Mastering Science &amp; Practice)</description>
    <inlineHelpText>Check this if this Contact is MSP Participant</inlineHelpText>
    <label>MSP Participant</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Mail_to__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to indicate a preferred contact for mailings (i.e. Price Lists).</inlineHelpText>
    <label>Mail to</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Mailing_Address_Other_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Reason is that some doctors wants documentation to be sent to their homes instead of their offices. For that reason the Other Address will be their office address and the Mailing address will be the home address. If the doctor has not asked for information to be sent to home, the checkbox should say that those two addresses are the same.</description>
    <label>Mailing Address = Other Address</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Main_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by AT &amp; UK DI to indicate that this is the main contact for the Account</description>
    <inlineHelpText>Tick this field if this is the main Contact for the Account.</inlineHelpText>
    <label>Main Contact</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Majored_in_D_JP__c</fullName>
    <description>Used to fill in the topic on which the Dentist has majored in.</description>
    <label>Majored in: (JP)</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Market__c</fullName>
    <label>Market</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Test</fullName>
        </value>
        <value>
          <fullName>Global Pick List</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Marketing_1_Email_Consent_How_Collected__c</fullName>
    <label>Marketing#1 Email Consent How Collected?</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetName>GDPR_consent_method</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>Marketing_1_Email_Consent_When_Collected__c</fullName>
    <label>Marketing#1 Email Consent When Collected</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>Marketing_1_Email_Consent_Where_Collecte__c</fullName>
    <label>Marketing#1 Email Consent Where Collecte</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Marketing_2_Email_Consent_How_Collected__c</fullName>
    <label>Marketing#2 Email Consent How Collected?</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetName>GDPR_consent_method</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>Marketing_2_Email_Consent_When_Collected__c</fullName>
    <label>Marketing#2 Email Consent When Collected</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>Marketing_2_Email_Consent_Where_Collecte__c</fullName>
    <description>Marketing#2 Email Consent Where Collected?</description>
    <inlineHelpText>Marketing#2 Email Consent Where Collected?</inlineHelpText>
    <label>Marketing#2 Email Consent Where Collecte</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Marketing_Email_1__c</fullName>
    <label>Marketing Email #1</label>
    <type>Email</type>
  </fields>
  <fields>
    <fullName>Marketing_Email_2__c</fullName>
    <label>Marketing Email #2</label>
    <type>Email</type>
  </fields>
  <fields>
    <fullName>MasterContactID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>MasterContactID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
  </fields>
  <fields>
    <fullName>MasterID__c</fullName>
    <description>The ID of the Master Record. For Contact Merge</description>
    <label>MasterID</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Middle_Name__c</fullName>
    <label>Middle Name</label>
    <length>40</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Mobile_2__c</fullName>
    <description>Alternative mobile number</description>
    <inlineHelpText>Alternative mobile number</inlineHelpText>
    <label>Mobile (2)</label>
    <type>Phone</type>
  </fields>
  <fields>
    <fullName>More_Information__c</fullName>
    <description>Used by Find a Dentist</description>
    <inlineHelpText>Mention the available services in this clinic, such as Dentist primarily doing both surgery and pros. or grab it from the clinic website!</inlineHelpText>
    <label>More Information</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Movex_Contact__c</fullName>
    <formula>Account.Movex__c</formula>
    <label>ERP #</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Movex__c</fullName>
    <label>Legacy Account ID</label>
    <length>10</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>My_Contact__c</fullName>
    <formula>IF( ISBLANK($User.Movex_Uer_ID__c),FALSE, CONTAINS( Account.DC_ETM_Code__c , $User.Movex_Uer_ID__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Contact?</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>NA_Account_Last_Sales_Date__c</fullName>
    <description>used from CA to track email-opt-in/out</description>
    <formula>Account.Last_Sales_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NA: Account Last Sales Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>NA_MKTG_Address_Line_1__c</fullName>
    <label>NA MKTG Address Line 1</label>
    <length>75</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>NA_MKTG_Address_Line_2__c</fullName>
    <label>NA MKTG Address Line 2</label>
    <length>75</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>NA_MKTG_Address_Line_3__c</fullName>
    <label>NA MKTG Address Line 3</label>
    <length>75</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>NA_MKTG_City__c</fullName>
    <label>NA MKTG City</label>
    <length>75</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>NA_MKTG_Country__c</fullName>
    <label>NA MKTG Country</label>
    <length>35</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>NA_MKTG_Do_Not_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NA MKTG Do Not Mail</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>NA_MKTG_State_Province__c</fullName>
    <label>NA MKTG State/Province</label>
    <length>75</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>NA_MKTG_Zip_Postal_Code__c</fullName>
    <label>NA MKTG Zip/Postal Code</label>
    <length>15</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>NA_NorthWest_Focus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NA NorthWest Focus</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>NA_State_License_Number__c</fullName>
    <description>Used in North America to capture the state license number of a contact, similar to an NPI number</description>
    <inlineHelpText>Used in North America to capture the state license number of a contact, similar to an NPI number</inlineHelpText>
    <label>NA: State License Number</label>
    <length>30</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>NA_State_Licensure__c</fullName>
    <label>NA: State Licensure</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>USA - AL</fullName>
        </value>
        <value>
          <fullName>USA - AK</fullName>
        </value>
        <value>
          <fullName>USA - AZ</fullName>
        </value>
        <value>
          <fullName>USA - AR</fullName>
        </value>
        <value>
          <fullName>USA - CA</fullName>
        </value>
        <value>
          <fullName>USA - CO</fullName>
        </value>
        <value>
          <fullName>USA - CT</fullName>
        </value>
        <value>
          <fullName>USA - DE</fullName>
        </value>
        <value>
          <fullName>USA - FL</fullName>
        </value>
        <value>
          <fullName>USA - GA</fullName>
        </value>
        <value>
          <fullName>USA - HI</fullName>
        </value>
        <value>
          <fullName>USA - ID</fullName>
        </value>
        <value>
          <fullName>USA - IL</fullName>
        </value>
        <value>
          <fullName>USA - IN</fullName>
        </value>
        <value>
          <fullName>USA - IA</fullName>
        </value>
        <value>
          <fullName>USA - KS</fullName>
        </value>
        <value>
          <fullName>USA - KY</fullName>
        </value>
        <value>
          <fullName>USA - LA</fullName>
        </value>
        <value>
          <fullName>USA - ME</fullName>
        </value>
        <value>
          <fullName>USA - MD</fullName>
        </value>
        <value>
          <fullName>USA - MA</fullName>
        </value>
        <value>
          <fullName>USA - MI</fullName>
        </value>
        <value>
          <fullName>USA - MN</fullName>
        </value>
        <value>
          <fullName>USA - MS</fullName>
        </value>
        <value>
          <fullName>USA - MO</fullName>
        </value>
        <value>
          <fullName>USA - MT</fullName>
        </value>
        <value>
          <fullName>USA - NE</fullName>
        </value>
        <value>
          <fullName>USA - NV</fullName>
        </value>
        <value>
          <fullName>USA - NH</fullName>
        </value>
        <value>
          <fullName>USA - NJ</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>NA_reGET_Blitz__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NA reGET Blitz</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>National_Speaker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>National Speaker</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Number_Of_Meals__c</fullName>
    <description>Counts number of meals provided this current year. Handled through a workaround using "This Year" and "End of Year" fields.

TFUS-000000887</description>
    <inlineHelpText>Number of meals provided for the contact this year</inlineHelpText>
    <label>Number Of Meals (CY)</label>
    <summaryFilterItems>
      <field>BusinessCourtesy__c.This_Year__c</field>
      <operation>equals</operation>
      <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
      <field>BusinessCourtesy__c.Courtesy_Type__c</field>
      <operation>equals</operation>
      <value>Meal</value>
    </summaryFilterItems>
    <summaryForeignKey>BusinessCourtesy__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>OneSF_Id__c</fullName>
    <displayFormat>SFC{0000000}</displayFormat>
    <externalId>true</externalId>
    <label>Unique SF Id</label>
    <type>AutoNumber</type>
  </fields>
  <fields>
    <fullName>OrderingWeb_Email_Consent_How_Collected__c</fullName>
    <label>OrderingWeb Email Consent How Collected?</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetName>GDPR_consent_method</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>OrderingWeb_Email_Consent_When_Collected__c</fullName>
    <label>OrderingWeb Email Consent When Collected</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>OrderingWeb_Email_Consent_Where_Collecte__c</fullName>
    <description>OrderingWeb Email Consent Where Collected?</description>
    <inlineHelpText>OrderingWeb Email Consent Where Collected?</inlineHelpText>
    <label>OrderingWeb Email Consent Where Collecte</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Ordering_Web_Email__c</fullName>
    <label>Ordering/Web Email</label>
    <type>Email</type>
  </fields>
  <fields>
    <fullName>PEERS_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checkmark indicates this Contact is a member of the DENTSPLY Implants PEERS Network.</inlineHelpText>
    <label>PEERS Member</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Patients_per_Week__c</fullName>
    <label>Patients per Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Personal_Email_Consent_How_Collected__c</fullName>
    <label>Personal Email Consent How Collected?</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetName>GDPR_consent_method</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>Personal_Email_Consent_When_Collected__c</fullName>
    <label>Personal Email Consent When Collected?</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>Personal_Email_Consent_Where_Collected__c</fullName>
    <label>Personal Email Consent Where Collected?</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Phone_and_mobile_is_populated__c</fullName>
    <description>Is True if either Phone or MobilePhone is populated on Contact</description>
    <formula>IF(LEN( Phone ) = 0 &amp;&amp;  LEN( MobilePhone ) = 0, FALSE,TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone and/or MobilePhone is populated</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Practitioner_ID_NPI_in_US__c</fullName>
    <label>Practitioner ID</label>
    <length>50</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Practitioner_ID_Populated__c</fullName>
    <formula>CASE( Practitioner_ID_NPI_in_US__c ,NULL,"No","Yes")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Practitioner ID Populated</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Preferred_Days__c</fullName>
    <description>Contact's Preferred Days of Visit</description>
    <label>Preferred Days</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Weekdays</fullName>
        </value>
        <value>
          <fullName>Weekend</fullName>
        </value>
        <value>
          <fullName>Mon</fullName>
        </value>
        <value>
          <fullName>Tue</fullName>
        </value>
        <value>
          <fullName>Wed</fullName>
        </value>
        <value>
          <fullName>Thu</fullName>
        </value>
        <value>
          <fullName>Fri</fullName>
        </value>
        <value>
          <fullName>Sat</fullName>
        </value>
        <value>
          <fullName>Sun</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Preferred_Hours__c</fullName>
    <description>Contact's Preferred hours of visit</description>
    <label>Preferred Hours</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Preferred_Language_CH__c</fullName>
    <label>Preferred Language (CH)</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>French</fullName>
        </value>
        <value>
          <fullName>German</fullName>
        </value>
        <value>
          <fullName>Italian</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Preferred_Language__c</fullName>
    <label>Preferred Language</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Chinese</fullName>
        </value>
        <value>
          <fullName>Danish</fullName>
        </value>
        <value>
          <fullName>Dutch</fullName>
        </value>
        <value>
          <fullName>English</fullName>
        </value>
        <value>
          <fullName>Finnish</fullName>
        </value>
        <value>
          <fullName>Flemish</fullName>
        </value>
        <value>
          <fullName>French</fullName>
        </value>
        <value>
          <fullName>German</fullName>
        </value>
        <value>
          <fullName>Italian</fullName>
        </value>
        <value>
          <fullName>Japanese</fullName>
        </value>
        <value>
          <fullName>Norwegian</fullName>
        </value>
        <value>
          <fullName>Portuguese</fullName>
        </value>
        <value>
          <fullName>Russian</fullName>
        </value>
        <value>
          <fullName>Spanish</fullName>
        </value>
        <value>
          <fullName>Swedish</fullName>
        </value>
        <value>
          <fullName>Thai</fullName>
        </value>
        <value>
          <fullName>Vietnamese</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>PrimaryAccountVisitingAddress__c</fullName>
    <formula>IF(NOT(ISBLANK(Account.BillingStreet)),      Account.BillingStreet            + BR(), NULL) +
IF(NOT(ISBLANK(Account.BillingCity)),        Account.BillingCity              + BR(), NULL) +
IF(NOT(ISBLANK(Account.BillingState)),       Account.BillingState,                    NULL) +
IF(NOT(ISBLANK(Account.BillingPostalCode)),  ", " + Account.BillingPostalCode + BR(), NULL) +
IF(NOT(ISBLANK(Account.BillingCountry)),     Account.BillingCountry,                  NULL)</formula>
    <label>Primary Account Visiting Address</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>PrimaryMethodOfContact__c</fullName>
    <label>Primary Method of Contact</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Email</fullName>
        </value>
        <value>
          <fullName>Phone</fullName>
        </value>
        <value>
          <fullName>Text</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Primary_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by OBIEE to mark the primary contact, automatically checked when created in workflow</description>
    <label>Primary Contact</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Primary_Lecture_Language__c</fullName>
    <description>Used by HQ T&amp;E.</description>
    <label>Primary Lecture Language</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Chinese</fullName>
        </value>
        <value>
          <fullName>Danish</fullName>
        </value>
        <value>
          <fullName>Dutch</fullName>
        </value>
        <value>
          <fullName>English</fullName>
        </value>
        <value>
          <fullName>Finnish</fullName>
        </value>
        <value>
          <fullName>French</fullName>
        </value>
        <value>
          <fullName>German</fullName>
        </value>
        <value>
          <fullName>Italian</fullName>
        </value>
        <value>
          <fullName>Japanese</fullName>
        </value>
        <value>
          <fullName>Norwegian</fullName>
        </value>
        <value>
          <fullName>Polish</fullName>
        </value>
        <value>
          <fullName>Portugese</fullName>
        </value>
        <value>
          <fullName>Russian</fullName>
        </value>
        <value>
          <fullName>Spanish</fullName>
        </value>
        <value>
          <fullName>Swedish</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Privacy_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Activates formula to display sensitive fields on End User Record.
Removed oct 2015 from all Profiles</description>
    <inlineHelpText>Check this box if consent given to access sensitive field on End User Record</inlineHelpText>
    <label>Privacy Consent</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Privacy__c</fullName>
    <inlineHelpText>Select Yes if this Contact has given his/her consent to Dentsply storing information about him/her.</inlineHelpText>
    <label>Privacy (IT)</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Yes</fullName>
        </value>
        <value>
          <fullName>No</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Private_NPD__c</fullName>
    <description>Removed oct 2015 from all Profiles</description>
    <label>Private NPD</label>
    <length>10</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Product_Area__c</fullName>
    <label>Product Area</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Dental</fullName>
          <default>true</default>
          <label>Dental</label>
        </value>
        <value>
          <fullName>Surgery</fullName>
        </value>
        <value>
          <fullName>Urology</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Profession_CA__c</fullName>
    <description>Used by Clinical Affairs - also included in some logic for the Fair Market Value calculations so needed a sepaareta list. Ultimate solution would be to merge this with global profession/contcat subtype valueas.</description>
    <inlineHelpText>Add the profession of the KOL</inlineHelpText>
    <label>Profession (KOL)</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>General Dentist</fullName>
        </value>
        <value>
          <fullName>Endodontist</fullName>
        </value>
        <value>
          <fullName>Pediatric Dentist</fullName>
        </value>
        <value>
          <fullName>Dental Anesthesiology</fullName>
        </value>
        <value>
          <fullName>Geriatric Dentist</fullName>
        </value>
        <value>
          <fullName>Periodontist</fullName>
        </value>
        <value>
          <fullName>Prosthodontist</fullName>
        </value>
        <value>
          <fullName>Special Care Dentistry</fullName>
        </value>
        <value>
          <fullName>Implantologist</fullName>
        </value>
        <value>
          <fullName>Oral and Maxilllofacial Pathology</fullName>
        </value>
        <value>
          <fullName>Orthodontist</fullName>
        </value>
        <value>
          <fullName>Oral and Maxillofacial Radiology</fullName>
        </value>
        <value>
          <fullName>Oral and Maxillofacial Surgeon</fullName>
        </value>
        <value>
          <fullName>Dental Assistant</fullName>
        </value>
        <value>
          <fullName>Laboratory Technician</fullName>
        </value>
        <value>
          <fullName>Dental Hygienist</fullName>
        </value>
        <value>
          <fullName>Oral Medicine Specialist</fullName>
        </value>
        <value>
          <fullName>Office Manager/Practice Administrator</fullName>
        </value>
        <value>
          <fullName>Oral Biologist</fullName>
        </value>
        <value>
          <fullName>Oral Microbiologist</fullName>
        </value>
        <value>
          <fullName>Dental Scientist</fullName>
        </value>
        <value>
          <fullName>Public Health Dentist</fullName>
        </value>
        <value>
          <fullName>Preventive Dentist</fullName>
        </value>
        <value>
          <fullName>Infection Control Specialist</fullName>
        </value>
        <value>
          <fullName>Forensic Dentistry</fullName>
        </value>
        <value>
          <fullName>Forensic Odontology</fullName>
        </value>
        <value>
          <fullName>Laboratory Owner/Upper Level Management</fullName>
        </value>
        <value>
          <fullName>Non-Healthcare Provider</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Profession_DEX__c</fullName>
    <label>Profession (DEX)</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>CEO</fullName>
        </value>
        <value>
          <fullName>Marketing</fullName>
        </value>
        <value>
          <fullName>Order</fullName>
        </value>
        <value>
          <fullName>Other</fullName>
        </value>
        <value>
          <fullName>Owner</fullName>
        </value>
        <value>
          <fullName>Sales Manager</fullName>
        </value>
        <value>
          <fullName>Sales Rep</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Profession_D_CH__c</fullName>
    <description>This local profession field for Switzerland Dental is an exact copy of the global Profession field, with the exception that certain picklist values not in use for Switzerland is removed (Denturist and Registrar) and one new one is added, Maxillo-facial Surgeon. 
2 users in CH are using the german translation and apparently the Germans have translated Registrar to MKG-Chirurg and why this picklist value has taken in use for these two users. Yvonne Rod is aware that we haven't yet gone local with the profession picklist values and that we're awaiting Dental Re-Design project. Still I couldn't assist her in other way than add this due to the translation issue.
Important to make sure FR,ES, IT and DE have translated the global picklist values accordingly. It is possible they have done the same thing with Denturist, Registrar and this need to be considered at re-design and convertion of data!</description>
    <label>Profession (CH)</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Dental Technician</fullName>
        </value>
        <value>
          <fullName>General manager</fullName>
        </value>
        <value>
          <fullName>Implant Manager</fullName>
        </value>
        <value>
          <fullName>Implantologist</fullName>
        </value>
        <value>
          <fullName>Lab Owner</fullName>
        </value>
        <value>
          <fullName>Maxillo-facial Surgeon</fullName>
        </value>
        <value>
          <fullName>Oral Surgeon</fullName>
        </value>
        <value>
          <fullName>Periodontist</fullName>
        </value>
        <value>
          <fullName>Post Graduate trainee</fullName>
        </value>
        <value>
          <fullName>Prosthodontist</fullName>
        </value>
        <value>
          <fullName>Purchaser</fullName>
        </value>
        <value>
          <fullName>Restorative Dentist</fullName>
        </value>
        <value>
          <fullName>Other Staff Dental</fullName>
        </value>
        <value>
          <fullName>dental technician master</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Profession__c</fullName>
    <description>Dependent upon Product Area</description>
    <label>Role/Profession</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Advanced Practice Dental Therapist</fullName>
        </value>
        <value>
          <fullName>Clinical Director</fullName>
        </value>
        <value>
          <fullName>Consultant</fullName>
        </value>
        <value>
          <fullName>Contractor</fullName>
        </value>
        <value>
          <fullName>Dean</fullName>
          <label>Dean/Head</label>
        </value>
        <value>
          <fullName>Dental Assistant</fullName>
        </value>
        <value>
          <fullName>Dental Hygienist</fullName>
        </value>
        <value>
          <fullName>Dental Laboratory General Manager</fullName>
        </value>
        <value>
          <fullName>Dental Laboratory Office Manager</fullName>
        </value>
        <value>
          <fullName>Dental Laboratory Technician</fullName>
        </value>
        <value>
          <fullName>Dental Nurse</fullName>
        </value>
        <value>
          <fullName>Dental Nurse Manager</fullName>
        </value>
        <value>
          <fullName>Dental Student</fullName>
        </value>
        <value>
          <fullName>Dental Technician</fullName>
        </value>
        <value>
          <fullName>Dental Technician Master</fullName>
        </value>
        <value>
          <fullName>Dental Therapist</fullName>
        </value>
        <value>
          <fullName>Dentist</fullName>
        </value>
        <value>
          <fullName>Denturist</fullName>
        </value>
        <value>
          <fullName>Distributor General Manager</fullName>
        </value>
        <value>
          <fullName>Distributor Sales Rep</fullName>
        </value>
        <value>
          <fullName>Doctor</fullName>
        </value>
        <value>
          <fullName>DS Employee</fullName>
        </value>
        <value>
          <fullName>Employee</fullName>
        </value>
        <value>
          <fullName>Endodontist</fullName>
        </value>
        <value>
          <fullName>Faculty/Instructor/Professor</fullName>
        </value>
        <value>
          <fullName>General Dentist</fullName>
        </value>
        <value>
          <fullName>General Manager</fullName>
        </value>
        <value>
          <fullName>Head of Department</fullName>
        </value>
        <value>
          <fullName>Implant Manager</fullName>
        </value>
        <value>
          <fullName>Implantologist</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Profile__c</fullName>
    <inlineHelpText>add SFE definition to the contact record</inlineHelpText>
    <label>Profile</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Business People</fullName>
        </value>
        <value>
          <fullName>Guru</fullName>
        </value>
        <value>
          <fullName>Innovator</fullName>
        </value>
        <value>
          <fullName>Team Player</fullName>
        </value>
        <value>
          <fullName>Traditionalist</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Publications__c</fullName>
    <description>Moritz 2019-02-20: I think this field was country specific and is not needed anymore. Case 00167417</description>
    <label>Publications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <controllingField>HasOptedOutOfEmail</controllingField>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Newsletter</fullName>
        </value>
        <value>
          <fullName>Relevant mailing</fullName>
        </value>
        <value>
          <fullName>Events</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Qualtrics_Survey__c</fullName>
    <description>Used for UK only at this point (2017-07-07). triggers a Survey in Qualtrics to be sent to this contact.</description>
    <formula>IF( ISPICKVAL(Account.Country__c, "UK"), HYPERLINK("https://dentsplyholdings.eu.qualtrics.com/WRQualtricsServer/sfApi.php?r=outboundMessage&amp;u=UR_0eOjA1G0fgGCzIx&amp;s=SV_cZN4mfrL8apYaz3&amp;t=TR_bfvSwHuSK2QdyRv", "Send Qualtrics Survey"),"")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Clikc Link to send Qualtrics survey</inlineHelpText>
    <label>Qualtrics Survey</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>SIMPLANT_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SIMPLANT User</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Sales_Unit_B2B_project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used for a temporary report/project in Germany - please don't delete this field before you contacted m. hamburger</description>
    <label>Sales Unit B2B project</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Salutation_CH__c</fullName>
    <label>Salutation (CH)</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>Preferred_Language_CH__c</controllingField>
      <valueSetDefinition>
        <value>
          <fullName>Mme</fullName>
        </value>
        <value>
          <fullName>M.</fullName>
        </value>
        <value>
          <fullName>Dr.</fullName>
        </value>
        <value>
          <fullName>Prof.</fullName>
        </value>
        <value>
          <fullName>Herrn</fullName>
        </value>
        <value>
          <fullName>Frau</fullName>
        </value>
        <value>
          <fullName>Signora</fullName>
        </value>
        <value>
          <fullName>Signore</fullName>
        </value>
        <value>
          <fullName>Dr</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Same_Account_Owner_HQ__c</fullName>
    <description>True: if the owner of contact similar to the account
False' if the owner of contact is different than the account</description>
    <formula>IF( OwnerId = Account.OwnerId ,"True","False")</formula>
    <label>Same Account Owner (HQ)</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Scientific_Marketing_D_IT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Italy to capture contacts being part of their scientific marketing program.</description>
    <label>Scientific Marketing (IT)</label>
    <type>Checkbox</type>
  </fields>
</CustomObject>